# DSPFilters

./: .gitignore  CMakeLists.txt
shared/DSPFilters/Builds/XCode4/DSPFilters.xcodeproj/: project.pbxproj
shared/DSPFilters/include/DspFilters/: Bessel.h  Butterworth.h  Cascade.h  ChebyshevI.h  ChebyshevII.h  Elliptic.h  Filter.h  Layout.h  Legendre.h  MathSupplement.h  State.h
shared/DSPFilters/source/: Biquad.cpp  Butterworth.cpp  ChebyshevI.cpp  ChebyshevII.cpp  Documentation.cpp  Elliptic.cpp  RBJ.cpp
shared/DSPFiltersDemo/Builds/XCode4/DSPFiltersDemo.xcodeproj/: project.pbxproj
shared/DSPFiltersDemo/Builds/XCode4/DSPFiltersDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
shared/DSPFiltersDemo/Builds/XCode4/DSPFiltersDemo.xcodeproj/xcshareddata/xcschemes/: DSP Filters Demo Mac.xcscheme  DSP Filters Demo iOS.xcscheme
shared/JuceAmalgam/: juce_events_amalgam.cpp  juce_graphics_amalgam.cpp
shared/JuceAmalgam/Builds/XCode4/JuceAmalgam.xcodeproj/: project.pbxproj
shared/JuceAmalgam/Builds/XCode4/JuceAmalgam.xcodeproj/xcshareddata/xcschemes/: Juce Amalgam Mac.xcscheme  Juce Amalgam iOS.xcscheme
src/lib/: Bessel.cpp  Biquad.cpp  CMakeLists.txt  ChebyshevI.cpp  Legendre.cpp  PoleFilter.cpp  RBJ.cpp
src/lib/DspFilters/: Butterworth.h  Cascade.h  ChebyshevII.h  Elliptic.h  Filter.h  Layout.h  RASTA.h  SmoothedFilter.h  Utilities.h
user/settings/XCode4/: Shared.xcconfig
